# iam2ssh-auth

./: ChangeLog  Dockerfile  README.md  setup.cfg
iamauth/: cli.py  core.py
