[metadata]
name = iamauth
author = nassim.babaci
author-email = nassim.babaci@cloudreach.co.uk
summary = Manage ssh authentication based on iam user.
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: AWS
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python
[hooks]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    iamauth

[entry_points]
console_scripts =
    authorizedkeys = iamauth.cli:main

cliff.iamauth.commands =
    list = iamauth.cli:AuthorizedKeys
